[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Mob1.gd" type="Script" id=1]
[ext_resource path="res://art/feijao_idle_1.png" type="Texture" id=2]
[ext_resource path="res://art/feijao_idle_2.png" type="Texture" id=3]
[ext_resource path="res://art/feijao_punch_1.png" type="Texture" id=4]
[ext_resource path="res://art/feijao_punch_2.png" type="Texture" id=5]
[ext_resource path="res://art/feijao_walk_1.png" type="Texture" id=6]
[ext_resource path="res://art/feijao_walk_2.png" type="Texture" id=7]
[ext_resource path="res://audios /hit33.ogg" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": false,
"name": "punch",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RayShape2D" id=2]

custom_solver_bias = 0.0
length = 80.5189

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 58.2448

[sub_resource type="CapsuleShape2D" id=4]

custom_solver_bias = 0.0
radius = 7.98428
height = 39.4243

[node name="MobBean" type="RigidBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
speed = 200

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

position = Vector2( 16, -20 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "punch"
frame = 1
playing = true
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 3 )

[node name="PunchHand" type="Area2D" parent="." index="3"]

position = Vector2( 90, 10 )
rotation = 1.5708
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PunchHand" index="0"]

shape = SubResource( 4 )
disabled = true

[node name="Feet" type="RayCast2D" parent="." index="4"]

enabled = true
exclude_parent = true
cast_to = Vector2( 0, 90 )
collision_mask = 1

[node name="PunchTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="PunchDelayTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="body_entered" from="PunchHand" to="." method="punch_hit"]

[connection signal="timeout" from="PunchTimer" to="." method="_on_PunchTimer_timeout"]

[connection signal="timeout" from="PunchDelayTimer" to="." method="_on_PunchDelayTimer_timeout"]


